--- a/main.html
+++ b/main.html
@@ -1,16 +1,80 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>Intern Application Form</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+
+<div class="container mt-5">
+    <h2>Intern Application Form</h2>
+    <form id="intern-form">
+        <div class="form-group">
+            <label for="first-name-input">First Name</label>
+            <input type="text" class="form-control" id="first-name-input" required>
+            <div class="invalid-feedback">Please enter your first name.</div>
+        </div>
+        <div class="form-group">
+            <label for="last-name-input">Last Name</label>
+            <input type="text" class="form-control" id="last-name-input" required>
+            <div class="invalid-feedback">Please enter your last name.</div>
+        </div>
+        <div class="form-group">
+            <label for="email-input">Email</label>
+            <input type="email" class="form-control" id="email-input" required>
+            <div class="invalid-feedback">Please enter a valid email address.</div>
+        </div>
+        <div class="form-group">
+            <label for="college-input">College Name</label>
+            <input type="text" class="form-control" id="college-input" required>
+            <div class="invalid-feedback">Please enter your college name.</div>
+        </div>
+        <div class="form-group">
+            <label for="roll-no-input">Roll No</label>
+            <input type="text" class="form-control" id="roll-no-input" required>
+            <div class="invalid-feedback">Please enter your roll number.</div>
+        </div>
+        <div class="form-group">
+            <label for="graduation-year">Graduation Year</label>
+            <select class="form-control" id="graduation-year" required>
+                <option value="">Select...</option>
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+                <option value="2022">2022</option>
+                <option value="2023">2023</option>
+            </select>
+            <div class="invalid-feedback">Please select your graduation year.</div>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="conditions-checkbox" required>
+            <label class="form-check-label" for="conditions-checkbox">I agree to the conditions</label>
+            <div class="invalid-feedback">You must agree before submitting.</div>
+        </div>
+        <button type="submit" class="btn btn-primary mt-3">Submit</button>
+    </form>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+    // JavaScript for form validation
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            var form = document.getElementById('intern-form');
+            form.addEventListener('submit', function (event) {
+                if (form.checkValidity() === false) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+            }, false);
+        }, false);
+    })();
 </script>
 
 </body>
-
 </html>
