--- a/main.html
+++ b/main.html
@@ -42,16 +42,16 @@
         </div>
         
         <div class="form-group">
-            <label for="graduation-year">Graduation Year</label>
-            <select class="form-control" id="graduation-year" required>
-                <option value="">Select...</option>
-                <option value="2020">2020</option>
-                <option value="2021">2021</option>
-                <option value="2022">2022</option>
-                <option value="2023">2023</option>
-            </select>
-            <div class="invalid-feedback">Please select your graduation year.</div>
-        </div>
+    <label for="graduation-year">Graduation Year</label>
+    <select class="form-control" id="grad-year-select" required>
+        <option value="">Select...</option>
+        <option value="2020">2020</option>
+        <option value="2021">2021</option>
+        <option value="2022">2022</option>
+        <option value="2023">2023</option>
+    </select>
+    <div class="invalid-feedback">Please select your graduation year.</div>
+</div>
         
         <div class="form-check">
             <input type="checkbox" class="form-check-input" id="conditions-checkbox" required>
